# FuLLM

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  data_example.jsonl  pyproject.toml
config/train_predict/: fullm_api.yaml  fullm_predict.yaml  gen_5fold_config.py  predict_template.yaml  train_template.yaml
data/: dataset_info.json  meta_info.json  wav_alpaca_dataset_dCap.jsonl
data/trained_models/fullm/: adapter_config.json  adapter_model.safetensors  tokenizer.json  tokenizer_config.json
llmtoolkit/: aioutils.py  utils.py
prompt/: data_rewrite_prompt.txt  data_synthesis_prompt.txt  one_shot_prompt.txt  zero_shot_cot_prompt.txt  zero_shot_prompt.txt
prompt_en/: data_rewrite_prompt.txt  data_synthesis_prompt.txt  one_shot_prompt.txt  zero_shot_cot_prompt.txt  zero_shot_prompt.txt
scripts/: eval.py  prompt_experiment_runner.py  run_data_postproc.sh  run_data_preproc.sh  run_model_inference.sh  run_svm.sh  run_train_predict.sh
scripts/01_data_preproc/: data_filter.py  data_rewrite.py  data_synthesis.py  prepare_train_pred.py  split_folds.py
scripts/02_exp_svm/: __init__.py  data_utils.py  eval_utils.py  tfidf_svm.py  word2vec_svm.py
scripts/03_data_postproc/: collect_source.py  convert_data_for_eval.py  extract_predict_data.py
